Prevent input zoom in Safari on iOS

--- a/bugreport.css
+++ b/bugreport.css
@@ -42,6 +42,11 @@ input[type="text"], select {
     height: 2.125rem;
     font-size: 0.875rem;
 }
+@supports (-webkit-overflow-scrolling: touch) {
+    input[type="text"], select {
+        font-size: 1rem;
+    }
+}
 .button:focus, .button:hover {
     background-color: #5970C1;
 }
